fix mat-sidenav issue
the problem was that mat-sidenav-content wasn't being used, which led to
layout problems

--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -1,17 +1,5 @@
 .home {
-  height: 100vh;
-  width: 100%;
   display: flex;
-  overflow-x: hidden;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    width: 100%;
-  }
-
-  &__list-wrapper {
-    width: 81%;
-  }
+  flex-direction: column;
+  padding: 2rem;
 }
