--- a/src/app/shared/components/nav-menu/nav-menu.component.scss
+++ b/src/app/shared/components/nav-menu/nav-menu.component.scss
@@ -1,16 +1,8 @@
 .nav-menu {
+  display: flex;
   height: 100%;
-
-  &__container {
-    padding: 2rem;
-  }
-
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-  }
+  flex-direction: column;
+  justify-content: space-between;
 
   &__option {
     display: flex;
